Fixed bug with z-index for back to top menu (it was showing below some elements)

--- a/src/stylesheets/components/_back-to-top.scss
+++ b/src/stylesheets/components/_back-to-top.scss
@@ -1,11 +1,11 @@
 .c-back-to-top {
   position: fixed;
   bottom: 2em;
-  right: 0px;
+  right: 1.5em;
+  z-index: 1;
   text-decoration: none;
   color: #000000;
   background-color: rgba(235, 235, 235, 0.80);
-  font-size: 12px;
   padding: 1em;
   display: none;
 
